@@ -8,6 +8,7 @@
     - In printing code, removed absolute constants and repalced them to be relative to page size
     - Fixed bugs that caused pages > 1 to have less contents than first page
     - Silences are now also printed in tablature mode; makes them easier to follow
+    - Print track name(s)
     - Many other readability improvements to tablature printing
     - Better printing of time signature changes
     - Connect grand staffs toghether (extend measure bars)
